# docs/callback/swagger.yaml
@@ -1225,6 +1225,13 @@ definitions:
       kb_name:
         type: string
     type: object
+  request.RagQaInfo:
+    properties:
+      qa_base_id:
+        type: string
+      qa_base_name:
+        type: string
+    type: object
   request.RagSearchKnowledgeBaseReq:
     properties:
       knowledge_base_info:
@@ -1266,6 +1273,55 @@ definitions:
       use_graph:
         description: 是否启动知识图谱查询
         type: boolean
+      userId:
+        type: string
+      weights:
+        allOf:
+        - $ref: '#/definitions/request.WeightParams'
+        description: 权重搜索下的权重配置
+    required:
+    - knowledgeIdList
+    - question
+    - userId
+    type: object
+  request.RagSearchQABaseReq:
+    properties:
+      knowledgeIdList:
+        items:
+          type: string
+        type: array
+      metadata_filtering:
+        description: 元数据过滤开关
+        type: boolean
+      metadata_filtering_conditions:
+        description: 元数据过滤条件
+        items:
+          $ref: '#/definitions/request.MetadataFilterItem'
+        type: array
+      qa_base_info:
+        additionalProperties:
+          items:
+            $ref: '#/definitions/request.RagQaInfo'
+          type: array
+        type: object
+      question:
+        type: string
+      rerank_mod:
+        description: rerank_model:重排序模式，weighted_score：权重搜索
+        type: string
+      rerank_model_id:
+        description: rerankId
+        type: string
+      retrieve_method:
+        description: hybrid_search:混合搜索， semantic_search:向量搜索， full_text_search：文本搜索
+        type: string
+      term_weight_coefficient:
+        description: 关键词系数
+        type: number
+      threshold:
+        type: number
+      topK:
+        type: integer
       userId:
         type: string
       weights:
@@ -1847,6 +1903,28 @@ paths:
           schema:
             $ref: '#/definitions/response.Response'
       summary: 查询知识库列表（命中测试）
+      tags:
+      - callback
+  /rag/search-qa-base:
+    post:
+      consumes:
+      - application/json
+      description: 查询问答列表（命中测试）
+      parameters:
+      - description: 查询知识库列表请求参数
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.RagSearchQABaseReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: 查询问答列表（命中测试）
       tags:
       - callback
   /workflow/list:
